[tool.poetry]
name = "beanie"
version = "0.1.0"
description = ""
authors = ["David Scott <davidscott@Davids-MacBook-Pro.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bson = "^0.5.10"
pydantic = "^2.5.3"
pymongo = "^4.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
